parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    APOSTROPHE
    ARRAY
    ARROW
    AS
    CALLABLE
    CATCH
    CLONE
    CLOSETAGAL
    COMMENTS
    COMMENTS_C99
    CONST
    CONTINUE
    DECLARE
    DIE
    DOT
    DOT_DOT
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FINALLY
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    MINUSEQUAL
    NAMESPACE
    PLUSEQUAL
    PRINT
    QUOTES
    REQUIRE_ONCE
    STATIC
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    XOR
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENTAG declaration_list CLOSETAG
Rule 2     declaration_list -> declaration
Rule 3     declaration_list -> declaration declaration_list
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> area fun_declaration
Rule 7     declaration -> header_declaration
Rule 8     declaration -> class_declaration
Rule 9     declaration -> echo_stmt
Rule 10    declaration -> selection_stmt
Rule 11    declaration -> iteration_stmt
Rule 12    declaration -> typeclass
Rule 13    echo_stmt -> echo_stmt ECHO STRING SEMI
Rule 14    echo_stmt -> echo_stmt ECHO IDVAR SEMI
Rule 15    echo_stmt -> empty
Rule 16    echo_stmt -> echo_stmt ECHO NUM SEMI
Rule 17    echo_stmt -> echo_stmt ECHO boolean SEMI
Rule 18    echo_stmt -> echo_stmt ECHO fun_declaration SEMI
Rule 19    header_declaration -> REQUIRE LPAREN STRING RPAREN SEMI
Rule 20    header_declaration -> INCLUDE LPAREN STRING RPAREN SEMI
Rule 21    class_declaration -> area CLASS ID LBLOCK attribute RBLOCK
Rule 22    class_declaration -> CLASS ID LBLOCK attribute RBLOCK
Rule 23    attribute -> attribute area var_declaration
Rule 24    attribute -> area var_declaration
Rule 25    attribute -> attribute area fun_declaration
Rule 26    attribute -> area fun_declaration
Rule 27    area -> PRIVATE
Rule 28    area -> PUBLIC
Rule 29    area -> PROTECTED
Rule 30    var_declaration -> IDVAR SEMI var_declaration
Rule 31    var_declaration -> IDVAR SEMI
Rule 32    var_declaration -> TIMESTIMES IDVAR SEMI
Rule 33    var_declaration -> TIMESTIMES IDVAR SEMI var_declaration
Rule 34    var_declaration -> IDVAR IGUAL NUM SEMI var_declaration
Rule 35    var_declaration -> IDVAR IGUAL NUM SEMI
Rule 36    var_declaration -> IDVAR IGUAL STRING SEMI var_declaration
Rule 37    var_declaration -> IDVAR IGUAL STRING SEMI
Rule 38    var_declaration -> IDVAR IGUAL boolean SEMI var_declaration
Rule 39    var_declaration -> IDVAR IGUAL boolean SEMI
Rule 40    var_declaration -> IDVAR IGUAL IDVAR SEMI var_declaration
Rule 41    var_declaration -> IDVAR IGUAL IDVAR SEMI
Rule 42    var_declaration -> AMPERSANT IDVAR SEMI var_declaration
Rule 43    var_declaration -> AMPERSANT IDVAR IGUAL IDVAR SEMI selection_stmt
Rule 44    var_declaration -> AMPERSANT IDVAR SEMI
Rule 45    var_declaration -> IDVAR IGUAL simple_expression SEMI
Rule 46    IGUAL -> EQUAL
Rule 47    IGUAL -> MUL_EQUAL
Rule 48    IGUAL -> DIV_EQUAL
Rule 49    IGUAL -> CONCAT_EQUAL
Rule 50    IGUAL -> MOD_EQUAL
Rule 51    IGUAL -> PLUS_EQUAL
Rule 52    IGUAL -> MINUS_EQUAL
Rule 53    fun_declaration -> FUNCTION ID LPAREN params RPAREN
Rule 54    fun_declaration -> FUNCTION ID LPAREN params RPAREN compount_stmt
Rule 55    params -> param_list
Rule 56    params -> empty
Rule 57    param_list -> param_list COMMA param_list
Rule 58    param_list -> param
Rule 59    param -> IDVAR
Rule 60    param -> IDVAR LBRACKET RBRACKET
Rule 61    compount_stmt -> LBLOCK echo_stmt local_declarations echo_stmt statement_list echo_stmt RBLOCK
Rule 62    local_declarations -> local_declarations var_declaration
Rule 63    local_declarations -> empty
Rule 64    statement_list -> statement_list statement
Rule 65    statement_list -> empty
Rule 66    statement -> expression_stmt
Rule 67    statement -> compount_stmt
Rule 68    statement -> selection_stmt
Rule 69    statement -> iteration_stmt
Rule 70    statement -> return_stmt
Rule 71    statement -> class_declaration
Rule 72    statement -> echo_stmt
Rule 73    expression_stmt -> expression SEMI
Rule 74    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 75    selection_stmt -> IF LPAREN expression RPAREN statement selection
Rule 76    selection -> ELSE statement
Rule 77    selection -> ELSEIF statement selection
Rule 78    selection_stmt -> SWITCH LPAREN var RPAREN statement
Rule 79    selection_stmt -> CASE NUM COLON statement BREAK SEMI
Rule 80    selection_stmt -> CASE STRING COLON statement BREAK SEMI
Rule 81    selection_stmt -> DEFAULT COLON statement BREAK SEMI
Rule 82    iteration_stmt -> FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
Rule 83    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 84    iteration_stmt -> DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
Rule 85    return_stmt -> RETURN SEMI
Rule 86    return_stmt -> RETURN expression SEMI
Rule 87    expression -> var EQUAL expression
Rule 88    expression -> simple_expression
Rule 89    expression -> var EQUAL AMPERSANT IDVAR
Rule 90    expression -> expression AND expression
Rule 91    expression -> expression OR expression
Rule 92    var -> IDVAR
Rule 93    var -> IDVAR LBRACKET expression RBRACKET
Rule 94    simple_expression -> additive_expression relop additive_expression
Rule 95    simple_expression -> additive_expression
Rule 96    relop -> LESS
Rule 97    relop -> LESSEQUAL
Rule 98    relop -> GREATER
Rule 99    relop -> GREATEREQUAL
Rule 100   relop -> DEQUAL
Rule 101   relop -> DISTINT
Rule 102   relop -> ISEQUAL
Rule 103   relop -> IS_IDENTICAL
Rule 104   relop -> IS_NOT_IDENTICAL
Rule 105   relop -> SR_EQUAL
Rule 106   relop -> SL_EQUAL
Rule 107   relop -> AND_EQUAL
Rule 108   relop -> OR_EQUAL
Rule 109   relop -> XOR_EQUAL
Rule 110   relop -> CONCAT_EQUAL
Rule 111   additive_expression -> additive_expression addop term
Rule 112   additive_expression -> term
Rule 113   additive_expression -> term MINUSMINUS
Rule 114   additive_expression -> term PLUSPLUS
Rule 115   addop -> PLUS
Rule 116   addop -> MINUS
Rule 117   term -> term mulop factor
Rule 118   term -> factor
Rule 119   mulop -> TIMES
Rule 120   mulop -> DIVIDE
Rule 121   factor -> LPAREN expression RPAREN
Rule 122   factor -> var
Rule 123   factor -> NUM
Rule 124   factor -> STRING
Rule 125   factor -> boolean
Rule 126   factor -> IDVAR LPAREN args RPAREN
Rule 127   args -> args_list
Rule 128   args -> empty
Rule 129   args -> VOID
Rule 130   args_list -> args_list COMMA expression
Rule 131   args_list -> expression
Rule 132   boolean -> TRUE
Rule 133   boolean -> FALSE
Rule 134   typeclass -> ID IDVAR EQUAL NEW constructor SEMI
Rule 135   constructor -> ID LPAREN RPAREN
Rule 136   constructor -> ID LPAREN args RPAREN
Rule 137   empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 42 43 44 89
AND                  : 90
AND_EQUAL            : 107
APOSTROPHE           : 
ARRAY                : 
ARROW                : 
AS                   : 
BREAK                : 79 80 81
CALLABLE             : 
CASE                 : 79 80
CATCH                : 
CLASS                : 21 22
CLONE                : 
CLOSETAG             : 1
CLOSETAGAL           : 
COLON                : 79 80 81
COMMA                : 57 130
COMMENTS             : 
COMMENTS_C99         : 
CONCAT_EQUAL         : 49 110
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 81
DEQUAL               : 100
DIE                  : 
DISTINT              : 101
DIVIDE               : 120
DIV_EQUAL            : 48
DO                   : 84
DOT                  : 
DOT_DOT              : 
ECHO                 : 13 14 16 17 18
ELSE                 : 76
ELSEIF               : 77
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 46 87 89 134
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FALSE                : 133
FINALLY              : 
FOR                  : 82
FOREACH              : 
FUNCTION             : 53 54
GLOBAL               : 
GOTO                 : 
GREATER              : 98
GREATEREQUAL         : 99
HASHTAG              : 
ID                   : 21 22 53 54 134 135 136
IDVAR                : 14 30 31 32 33 34 35 36 37 38 39 40 40 41 41 42 43 43 44 45 59 60 89 92 93 126 134
IF                   : 74 75
IMPLEMENTS           : 
INCLUDE              : 20
INCLUDE_ONCE         : 
INSTANCEOF           : 
INSTEADOF            : 
INTERFACE            : 
ISEQUAL              : 102
ISSET                : 
IS_IDENTICAL         : 103
IS_NOT_IDENTICAL     : 104
LBLOCK               : 21 22 61 84
LBRACKET             : 60 93
LESS                 : 96
LESSEQUAL            : 97
LIST                 : 
LPAREN               : 19 20 53 54 74 75 78 82 83 84 121 126 135 136
MINUS                : 116
MINUSEQUAL           : 
MINUSMINUS           : 113
MINUS_EQUAL          : 52
MOD_EQUAL            : 50
MUL_EQUAL            : 47
NAMESPACE            : 
NEW                  : 134
NUM                  : 16 34 35 79 123
OPENTAG              : 1
OR                   : 91
OR_EQUAL             : 108
PLUS                 : 115
PLUSEQUAL            : 
PLUSPLUS             : 114
PLUS_EQUAL           : 51
PRINT                : 
PRIVATE              : 27
PROTECTED            : 29
PUBLIC               : 28
QUOTES               : 
RBLOCK               : 21 22 61 84
RBRACKET             : 60 93
REQUIRE              : 19
REQUIRE_ONCE         : 
RETURN               : 85 86
RPAREN               : 19 20 53 54 74 75 78 82 83 84 121 126 135 136
SEMI                 : 13 14 16 17 18 19 20 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 73 79 80 81 82 82 84 85 86 134
SL_EQUAL             : 106
SR_EQUAL             : 105
STATIC               : 
STRING               : 13 19 20 36 37 80 124
SWITCH               : 78
THROW                : 
TIMES                : 119
TIMESTIMES           : 32 33
TRAIT                : 
TRUE                 : 132
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VOID                 : 129
WHILE                : 83 84
XOR                  : 
XOR_EQUAL            : 109
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

IGUAL                : 34 35 36 37 38 39 40 41 43 45
additive_expression  : 82 94 94 95 111
addop                : 111
area                 : 6 21 23 24 25 26
args                 : 126 136
args_list            : 127 130
attribute            : 21 22 23 25
boolean              : 17 38 39 125
class_declaration    : 8 71
compount_stmt        : 54 67
constructor          : 134
declaration          : 2 3
declaration_list     : 1 3
echo_stmt            : 9 13 14 16 17 18 61 61 61 72
empty                : 15 56 63 65 128
expression           : 73 74 75 82 83 84 86 87 90 90 91 91 93 121 130 131
expression_stmt      : 66
factor               : 117 118
fun_declaration      : 5 6 18 25 26
header_declaration   : 7
iteration_stmt       : 11 69
local_declarations   : 61 62
mulop                : 117
param                : 58
param_list           : 55 57 57
params               : 53 54
program              : 0
relop                : 94
return_stmt          : 70
selection            : 75 77
selection_stmt       : 10 43 68
simple_expression    : 45 88
statement            : 64 74 75 76 77 78 79 80 81 82 83 84
statement_list       : 61 64
term                 : 111 112 113 114 117
typeclass            : 12
var                  : 78 87 89 122
var_declaration      : 4 23 24 30 33 34 36 38 40 42 62 82

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENTAG declaration_list CLOSETAG

    OPENTAG         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENTAG . declaration_list CLOSETAG
    (2) declaration_list -> . declaration
    (3) declaration_list -> . declaration declaration_list
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (30) var_declaration -> . IDVAR SEMI var_declaration
    (31) var_declaration -> . IDVAR SEMI
    (32) var_declaration -> . TIMESTIMES IDVAR SEMI
    (33) var_declaration -> . TIMESTIMES IDVAR SEMI var_declaration
    (34) var_declaration -> . IDVAR IGUAL NUM SEMI var_declaration
    (35) var_declaration -> . IDVAR IGUAL NUM SEMI
    (36) var_declaration -> . IDVAR IGUAL STRING SEMI var_declaration
    (37) var_declaration -> . IDVAR IGUAL STRING SEMI
    (38) var_declaration -> . IDVAR IGUAL boolean SEMI var_declaration
    (39) var_declaration -> . IDVAR IGUAL boolean SEMI
    (40) var_declaration -> . IDVAR IGUAL IDVAR SEMI var_declaration
    (41) var_declaration -> . IDVAR IGUAL IDVAR SEMI
    (42) var_declaration -> . AMPERSANT IDVAR SEMI var_declaration
    (43) var_declaration -> . AMPERSANT IDVAR IGUAL IDVAR SEMI selection_stmt
    (44) var_declaration -> . AMPERSANT IDVAR SEMI
    (45) var_declaration -> . IDVAR IGUAL simple_expression SEMI
    (53) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (54) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (27) area -> . PRIVATE
    (28) area -> . PUBLIC
    (29) area -> . PROTECTED
    (19) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (20) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (21) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (22) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (13) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (14) echo_stmt -> . echo_stmt ECHO IDVAR SEMI
    (15) echo_stmt -> . empty
    (16) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (17) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (18) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (74) selection_stmt -> . IF LPAREN expression RPAREN statement
    (75) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (78) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (79) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (80) selection_stmt -> . CASE STRING COLON statement BREAK SEMI
    (81) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (82) iteration_stmt -> . FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
    (83) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (84) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (134) typeclass -> . ID IDVAR EQUAL NEW constructor SEMI
    (137) empty -> .

  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    IDVAR           shift and go to state 14
    TIMESTIMES      shift and go to state 15
    AMPERSANT       shift and go to state 16
    FUNCTION        shift and go to state 17
    PRIVATE         shift and go to state 19
    PUBLIC          shift and go to state 20
    PROTECTED       shift and go to state 21
    REQUIRE         shift and go to state 22
    INCLUDE         shift and go to state 23
    CLASS           shift and go to state 24
    IF              shift and go to state 26
    SWITCH          shift and go to state 27
    CASE            shift and go to state 28
    DEFAULT         shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ID              shift and go to state 18
    ECHO            reduce using rule 137 (empty -> .)
    CLOSETAG        reduce using rule 137 (empty -> .)

  ! IDVAR           [ reduce using rule 137 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 137 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 137 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 137 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 137 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 137 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 137 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 137 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 137 (empty -> .) ]
  ! CLASS           [ reduce using rule 137 (empty -> .) ]
  ! IF              [ reduce using rule 137 (empty -> .) ]
  ! SWITCH          [ reduce using rule 137 (empty -> .) ]
  ! CASE            [ reduce using rule 137 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 137 (empty -> .) ]
  ! FOR             [ reduce using rule 137 (empty -> .) ]
  ! WHILE           [ reduce using rule 137 (empty -> .) ]
  ! DO              [ reduce using rule 137 (empty -> .) ]
  ! ID              [ reduce using rule 137 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    empty                          shift and go to state 25

state 3

    (1) program -> OPENTAG declaration_list . CLOSETAG

    CLOSETAG        shift and go to state 33


state 4

    (2) declaration_list -> declaration .
    (3) declaration_list -> declaration . declaration_list
    (2) declaration_list -> . declaration
    (3) declaration_list -> . declaration declaration_list
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . area fun_declaration
    (7) declaration -> . header_declaration
    (8) declaration -> . class_declaration
    (9) declaration -> . echo_stmt
    (10) declaration -> . selection_stmt
    (11) declaration -> . iteration_stmt
    (12) declaration -> . typeclass
    (30) var_declaration -> . IDVAR SEMI var_declaration
    (31) var_declaration -> . IDVAR SEMI
    (32) var_declaration -> . TIMESTIMES IDVAR SEMI
    (33) var_declaration -> . TIMESTIMES IDVAR SEMI var_declaration
    (34) var_declaration -> . IDVAR IGUAL NUM SEMI var_declaration
    (35) var_declaration -> . IDVAR IGUAL NUM SEMI
    (36) var_declaration -> . IDVAR IGUAL STRING SEMI var_declaration
    (37) var_declaration -> . IDVAR IGUAL STRING SEMI
    (38) var_declaration -> . IDVAR IGUAL boolean SEMI var_declaration
    (39) var_declaration -> . IDVAR IGUAL boolean SEMI
    (40) var_declaration -> . IDVAR IGUAL IDVAR SEMI var_declaration
    (41) var_declaration -> . IDVAR IGUAL IDVAR SEMI
    (42) var_declaration -> . AMPERSANT IDVAR SEMI var_declaration
    (43) var_declaration -> . AMPERSANT IDVAR IGUAL IDVAR SEMI selection_stmt
    (44) var_declaration -> . AMPERSANT IDVAR SEMI
    (45) var_declaration -> . IDVAR IGUAL simple_expression SEMI
    (53) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (54) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt
    (27) area -> . PRIVATE
    (28) area -> . PUBLIC
    (29) area -> . PROTECTED
    (19) header_declaration -> . REQUIRE LPAREN STRING RPAREN SEMI
    (20) header_declaration -> . INCLUDE LPAREN STRING RPAREN SEMI
    (21) class_declaration -> . area CLASS ID LBLOCK attribute RBLOCK
    (22) class_declaration -> . CLASS ID LBLOCK attribute RBLOCK
    (13) echo_stmt -> . echo_stmt ECHO STRING SEMI
    (14) echo_stmt -> . echo_stmt ECHO IDVAR SEMI
    (15) echo_stmt -> . empty
    (16) echo_stmt -> . echo_stmt ECHO NUM SEMI
    (17) echo_stmt -> . echo_stmt ECHO boolean SEMI
    (18) echo_stmt -> . echo_stmt ECHO fun_declaration SEMI
    (74) selection_stmt -> . IF LPAREN expression RPAREN statement
    (75) selection_stmt -> . IF LPAREN expression RPAREN statement selection
    (78) selection_stmt -> . SWITCH LPAREN var RPAREN statement
    (79) selection_stmt -> . CASE NUM COLON statement BREAK SEMI
    (80) selection_stmt -> . CASE STRING COLON statement BREAK SEMI
    (81) selection_stmt -> . DEFAULT COLON statement BREAK SEMI
    (82) iteration_stmt -> . FOR LPAREN var_declaration SEMI expression SEMI additive_expression RPAREN statement
    (83) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (84) iteration_stmt -> . DO LBLOCK statement SEMI RBLOCK WHILE LPAREN expression RPAREN
    (134) typeclass -> . ID IDVAR EQUAL NEW constructor SEMI
    (137) empty -> .

  ! shift/reduce conflict for IDVAR resolved as shift
  ! shift/reduce conflict for TIMESTIMES resolved as shift
  ! shift/reduce conflict for AMPERSANT resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! reduce/reduce conflict for CLOSETAG resolved using rule 2 (declaration_list -> declaration .)
    CLOSETAG        reduce using rule 2 (declaration_list -> declaration .)
    IDVAR           shift and go to state 14
    TIMESTIMES      shift and go to state 15
    AMPERSANT       shift and go to state 16
    FUNCTION        shift and go to state 17
    PRIVATE         shift and go to state 19
    PUBLIC          shift and go to state 20
    PROTECTED       shift and go to state 21
    REQUIRE         shift and go to state 22
    INCLUDE         shift and go to state 23
    CLASS           shift and go to state 24
    IF              shift and go to state 26
    SWITCH          shift and go to state 27
    CASE            shift and go to state 28
    DEFAULT         shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    DO              shift and go to state 32
    ID              shift and go to state 18
    ECHO            reduce using rule 137 (empty -> .)

  ! IDVAR           [ reduce using rule 137 (empty -> .) ]
  ! TIMESTIMES      [ reduce using rule 137 (empty -> .) ]
  ! AMPERSANT       [ reduce using rule 137 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 137 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 137 (empty -> .) ]
  ! PUBLIC          [ reduce using rule 137 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 137 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 137 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 137 (empty -> .) ]
  ! CLASS           [ reduce using rule 137 (empty -> .) ]
  ! IF              [ reduce using rule 137 (empty -> .) ]
  ! SWITCH          [ reduce using rule 137 (empty -> .) ]
  ! CASE            [ reduce using rule 137 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 137 (empty -> .) ]
  ! FOR             [ reduce using rule 137 (empty -> .) ]
  ! WHILE           [ reduce using rule 137 (empty -> .) ]
  ! DO              [ reduce using rule 137 (empty -> .) ]
  ! ID              [ reduce using rule 137 (empty -> .) ]
  ! CLOSETAG        [ reduce using rule 137 (empty -> .) ]

    declaration                    shift and go to state 4
    declaration_list               shift and go to state 34
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    area                           shift and go to state 7
    header_declaration             shift and go to state 8
    class_declaration              shift and go to state 9
    echo_stmt                      shift and go to state 10
    selection_stmt                 shift and go to state 11
    iteration_stmt                 shift and go to state 12
    typeclass                      shift and go to state 13
    empty                          shift and go to state 25

state 5

    (4) declaration -> var_declaration .

    IDVAR           reduce using rule 4 (declaration -> var_declaration .)
    TIMESTIMES      reduce using rule 4 (declaration -> var_declaration .)
    AMPERSANT       reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    PRIVATE         reduce using rule 4 (declaration -> var_declaration .)
    PUBLIC          reduce using rule 4 (declaration -> var_declaration .)
    PROTECTED       reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    CLASS           reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    DO              reduce using rule 4 (declaration -> var_declaration .)
    ID              reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)
    CLOSETAG        reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    IDVAR           reduce using rule 5 (declaration -> fun_declaration .)
    TIMESTIMES      reduce using rule 5 (declaration -> fun_declaration .)
    AMPERSANT       reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    PRIVATE         reduce using rule 5 (declaration -> fun_declaration .)
    PUBLIC          reduce using rule 5 (declaration -> fun_declaration .)
    PROTECTED       reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    INCLUDE         reduce using rule 5 (declaration -> fun_declaration .)
    CLASS           reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    DO              reduce using rule 5 (declaration -> fun_declaration .)
    ID              reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)
    CLOSETAG        reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> area . fun_declaration
    (21) class_declaration -> area . CLASS ID LBLOCK attribute RBLOCK
    (53) fun_declaration -> . FUNCTION ID LPAREN params RPAREN
    (54) fun_declaration -> . FUNCTION ID LPAREN params RPAREN compount_stmt

    CLASS           shift and go to state 36
    FUNCTION        shift and go to state 17

    fun_declaration                shift and go to state 35

state 8

    (7) declaration -> header_declaration .

    IDVAR           reduce using rule 7 (declaration -> header_declaration .)
    TIMESTIMES      reduce using rule 7 (declaration -> header_declaration .)
    AMPERSANT       reduce using rule 7 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> header_declaration .)
    PRIVATE         reduce using rule 7 (declaration -> header_declaration .)
    PUBLIC          reduce using rule 7 (declaration -> header_declaration .)
    PROTECTED       reduce using rule 7 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> header_declaration .)
    INCLUDE         reduce using rule 7 (declaration -> header_declaration .)
    CLASS           reduce using rule 7 (declaration -> header_declaration .)
    IF              reduce using rule 7 (declaration -> header_declaration .)
    SWITCH          reduce using rule 7 (declaration -> header_declaration .)
    CASE            reduce using rule 7 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> header_declaration .)
    FOR             reduce using rule 7 (declaration -> header_declaration .)
    WHILE           reduce using rule 7 (declaration -> header_declaration .)
    DO              reduce using rule 7 (declaration -> header_declaration .)
    ID              reduce using rule 7 (declaration -> header_declaration .)
    ECHO            reduce using rule 7 (declaration -> header_declaration .)
    CLOSETAG        reduce using rule 7 (declaration -> header_declaration .)


state 9

    (8) declaration -> class_declaration .
